# PressPlot

./: .gitignore  README.md  pyproject.toml
examples/: reproduce_bill_act.py  reproduce_bubble.py  reproduce_clean_modern.py  reproduce_drinking.py  reproduce_french_math.py  reproduce_greenland.py  reproduce_manufacturing.py  reproduce_map.py  reproduce_nobel.py  reproduce_passport.py  reproduce_political_violence.py  reproduce_scatter.py  reproduce_shutdown.py  reproduce_tariff.py  reproduce_tech.py  reproduce_tiktok.py
plottheme/: __init__.py  core.py  themes.py  utils.py
plottheme/fonts/Swift/: Swift-ExtraBold-Italic.eot  Swift-Italic.eot  Swift-Light.eot  Swift.eot  demo.html
pressplot/: registry.py
pressplot/fonts/Swift/: Swift-Bold.eot  Swift-BoldItalic.eot  Swift-ExtraBold.eot  Swift-Light-Italic.eot  stylesheet.css
